--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,15 +1,17 @@
 <header>
   <nav>
     <ul>
-      <li *ngFor="let item of items">
-        <a
-          [routerLink]="item.path"
-          routerLinkActive="active"
-          [routerLinkActiveOptions]="{ exact: true }"
-        >
-          {{ item.displayName }}
-        </a>
-      </li>
+      @for (item of items; track item) {
+        <li>
+          <a
+            [routerLink]="item.path"
+            routerLinkActive="active"
+            [routerLinkActiveOptions]="{ exact: true }"
+          >
+            {{ item.displayName }}
+          </a>
+        </li>
+      }
     </ul>
   </nav>
 </header>
