--- a/src/app/projects/images-swiper/images-swiper.component.html
+++ b/src/app/projects/images-swiper/images-swiper.component.html
@@ -1,20 +1,21 @@
-<ng-container *ngIf="images && images.length">
+@if (images && images.length) {
   <swiper-container [appSwiper]="_swiperOptions" init="false">
-    <swiper-slide
-      *ngFor="let image of images; index as i"
-      [style.aspect-ratio]="image.width / image.height"
-      [style.min-width.%]="
-        !!_maxSlidesPerView ? 100 / _maxSlidesPerView : undefined
-      "
-    >
-      <img
-        [ngSrc]="image.filePath"
-        [ngSrcset]="responsiveImageAttributes.breakpoints.ngSrcSet.asString"
-        [sizes]="responsiveImageAttributes.sizes.asString"
-        [fill]="true"
-        [priority]="priority && i < (_maxSlidesPerView ?? 0)"
-        [alt]="image.alt || DEFAULT_IMAGE_ALT"
-      />
-    </swiper-slide>
+    @for (image of images; track image; let i = $index) {
+      <swiper-slide
+        [style.aspect-ratio]="image.width / image.height"
+        [style.min-width.%]="
+          !!_maxSlidesPerView ? 100 / _maxSlidesPerView : undefined
+        "
+      >
+        <img
+          [ngSrc]="image.filePath"
+          [ngSrcset]="responsiveImageAttributes.breakpoints.ngSrcSet.asString"
+          [sizes]="responsiveImageAttributes.sizes.asString"
+          [fill]="true"
+          [priority]="priority && i < (_maxSlidesPerView ?? 0)"
+          [alt]="image.alt || DEFAULT_IMAGE_ALT"
+        />
+      </swiper-slide>
+    }
   </swiper-container>
-</ng-container>
+}
