--- a/src/app/projects/project-page/project-page.component.html
+++ b/src/app/projects/project-page/project-page.component.html
@@ -1,37 +1,41 @@
-<ng-container *ngIf="assetsCollections$ | async as assetsCollections">
-  <ng-container
-    *ngFor="let assetsCollection of assetsCollections; index as index"
-  >
+@if (assetsCollections$ | async; as assetsCollections) {
+  @for (
+    assetsCollection of assetsCollections;
+    track assetsCollection;
+    let index = $index
+  ) {
     <div
       class="assets"
       [class.half]="assetsCollection.data.size === AssetsCollectionSize.Half"
     >
       <h2>{{ assetsCollection.data.name }}</h2>
-      <iframe
-        *ngIf="assetsCollection.type === AssetsCollectionType.Video"
-        width="560"
-        height="315"
-        [attr.src]="
-          assetsCollection.youtubePlaylist.iframeUrl | sanitizeResourceUrl
-        "
-        title="YouTube video player"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-        allowfullscreen
-      ></iframe>
-      <app-images-swiper
-        *ngIf="assetsCollection.type === AssetsCollectionType.Image"
-        [images]="assetsCollection.images"
-        [responsiveImageAttributes]="
-          assetsCollection.imagesSwiperConfig.attributes
-        "
-        [customSwiperOptions]="
-          assetsCollection.imagesSwiperConfig.customSwiperOptions
-        "
-        [style.max-width.px]="
-          assetsCollection.imagesSwiperConfig.maxWidth?.value
-        "
-        [priority]="index < MAX_SWIPERS_PER_VIEWPORT"
-      ></app-images-swiper>
+      @if (assetsCollection.type === AssetsCollectionType.Video) {
+        <iframe
+          width="560"
+          height="315"
+          [attr.src]="
+            assetsCollection.youtubePlaylist.iframeUrl | sanitizeResourceUrl
+          "
+          title="YouTube video player"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen
+        ></iframe>
+      }
+      @if (assetsCollection.type === AssetsCollectionType.Image) {
+        <app-images-swiper
+          [images]="assetsCollection.images"
+          [responsiveImageAttributes]="
+            assetsCollection.imagesSwiperConfig.attributes
+          "
+          [customSwiperOptions]="
+            assetsCollection.imagesSwiperConfig.customSwiperOptions
+          "
+          [style.max-width.px]="
+            assetsCollection.imagesSwiperConfig.maxWidth?.value
+          "
+          [priority]="index < MAX_SWIPERS_PER_VIEWPORT"
+        ></app-images-swiper>
+      }
     </div>
-  </ng-container>
-</ng-container>
+  }
+}
