--- a/src/app/projects/images-swiper/images-swiper.component.html
+++ b/src/app/projects/images-swiper/images-swiper.component.html
@@ -1,19 +1,20 @@
-@if (images && images.length) {
-  <swiper-container [appSwiper]="_swiperOptions" init="false">
-    @for (image of images; track image; let i = $index) {
+@if (images().length) {
+  <swiper-container [appSwiper]="_effectiveSwiperOptions()" init="false">
+    @for (image of images(); track image; let i = $index) {
+      @let maxSlidesPerView = _maxSlidesPerView();
       <swiper-slide
         [style.aspect-ratio]="image.width / image.height"
         [style.min-width.%]="
-          !!_maxSlidesPerView ? 100 / _maxSlidesPerView : undefined
+          maxSlidesPerView ? 100 / maxSlidesPerView : undefined
         "
       >
         <img
           [ngSrc]="image.filePath"
-          [ngSrcset]="responsiveImageAttributes.breakpoints.ngSrcSet.asString"
-          [sizes]="responsiveImageAttributes.sizes.asString"
+          [ngSrcset]="responsiveImageAttributes().breakpoints.ngSrcSet.asString"
+          [sizes]="responsiveImageAttributes().sizes.asString"
           [fill]="true"
-          [priority]="priority && i < (_maxSlidesPerView ?? 0)"
-          [alt]="image.alt || DEFAULT_IMAGE_ALT"
+          [priority]="priority() && i < (maxSlidesPerView ?? 0)"
+          [alt]="image.alt || 'Image'"
         />
       </swiper-slide>
     }
