--- a/src/app/projects/projects-page/projects-page.component.html
+++ b/src/app/projects/projects-page/projects-page.component.html
@@ -1,7 +1,7 @@
 @for (item of projects | async; track item; let index = $index) {
   <app-project-list-item
     [item]="item"
-    [priority]="index < MAX_PROJECTS_PER_PAGE"
+    [priority]="index < _maxProjectsPerPage"
     [class.has-preview-images]="item.previewImages && item.previewImages.length"
   ></app-project-list-item>
 }
