--- a/src/app/projects/projects-page/project-list-item/project-list-item.component.scss
+++ b/src/app/projects/projects-page/project-list-item/project-list-item.component.scss
@@ -2,98 +2,99 @@
 @use 'content';
 @use 'margins';
 @use 'paddings';
-@use 'page';
 @use 'typographies';
 
 :host {
   display: flex;
   flex-direction: column;
   gap: margins.$m;
+  width: 100%;
+}
 
-  .text-and-images {
-    display: flex;
-    align-content: flex-start;
-    gap: margins.$l;
+.text-and-images {
+  display: flex;
+  align-content: flex-start;
+  gap: margins.$l;
+}
+
+$texts-width-big-screen: 55ch;
+
+.texts {
+  display: flex;
+  flex-direction: column;
+  max-width: 50ch;
+  flex-shrink: 0;
+}
+
+.title {
+  @include typographies.size(8);
+  @include typographies.bold;
+
+  margin-bottom: margins.$xxs;
+}
+
+.subtitle {
+  @include typographies.size(4);
+  @include typographies.bold;
+
+  margin-bottom: margins.$l;
+}
+
+.quote {
+  @include typographies.size(1);
+  @include typographies.regular;
+
+  margin-bottom: margins.$l;
+}
+
+.description {
+  @include typographies.light;
+
+  // Keep line breaks
+  white-space: pre-wrap;
+}
+
+.credits {
+  @include typographies.regular;
+
+  display: flex;
+  flex-wrap: wrap;
+  gap: margins.$s;
+  justify-content: flex-start;
+
+  .anchor {
+    display: inline flow-root;
   }
+}
 
-  $texts-width-big-screen: 55ch;
+.images {
+  width: 100%;
+  // https://github.com/glidejs/glide/issues/233
+  min-width: 0;
+  $available-height: content.$available-height-without-header;
+  max-height: calc($available-height);
+}
+
+@include breakpoints.until-s {
+  .text-and-images {
+    flex-wrap: wrap;
+    gap: margins.$m;
+  }
 
   .texts {
-    display: flex;
-    flex-direction: column;
-    max-width: 55ch;
+    order: 2;
+    max-width: unset;
+    flex-shrink: 1;
   }
 
-  //👇 Keep in sync with component responsive images
-  app-images-swiper {
-    // 👇 Seems swiper needs size set to work fine
-    $page-padding-horizontal: page.$padding-horizontal;
-    width: calc(100vw - $texts-width-big-screen - $page-padding-horizontal * 2);
-    $extra-space: 48px;
-    $available-height: content.$available-height;
-    max-height: calc($available-height);
-  }
+  .images {
+    width: 100%;
+    min-height: 300px;
+    order: 1;
 
-  @include breakpoints.until-s {
-    .text-and-images {
-      flex-wrap: wrap;
-      gap: margins.$m;
-    }
-
-    .texts {
-      order: 2;
-      max-width: unset;
-    }
-
-    app-images-swiper {
-      width: 100%;
-      min-height: 300px;
-      order: 1;
-
-      $extra-space: 128px;
-      $available-height: content.$available-height-with-header;
-      max-height: calc($available-height - $extra-space);
-    }
-  }
-
-  .title {
-    @include typographies.size(8);
-    @include typographies.bold;
-
-    margin-bottom: margins.$xxs;
-  }
-
-  .subtitle {
-    @include typographies.size(4);
-    @include typographies.bold;
-
-    margin-bottom: margins.$l;
-  }
-
-  .quote {
-    @include typographies.size(1);
-    @include typographies.regular;
-
-    margin-bottom: margins.$l;
-  }
-
-  .description {
-    @include typographies.light;
-
-    // Keep line breaks
-    white-space: pre-wrap;
-  }
-
-  .credits {
-    @include typographies.regular;
-
-    display: flex;
-    flex-wrap: wrap;
-    gap: margins.$s;
-    justify-content: flex-start;
-
-    .anchor {
-      display: inline-block;
-    }
+    $extra-space: 128px;
+    $available-height: content.$available-height-with-header;
+    height: auto;
+    max-height: calc($available-height - $extra-space);
   }
 }
