--- a/src/sass/_content.scss
+++ b/src/sass/_content.scss
@@ -5,10 +5,10 @@
 $height-header: header.$height;
 $height-logo: logo.$height;
 $height-page-padding: page.$padding-vertical;
-$height-before-with-header: calc(
-  $height-header + $height-logo + $height-page-padding * 2
-);
 $height-before-without-header: calc($height-logo + $height-page-padding * 2);
+$height-before-with-header: calc(
+  $height-before-without-header + $height-header
+);
 
 $available-height-with-header: calc(100vh - $height-before-with-header);
-$available-height: calc(100vh - $height-before-without-header);
+$available-height-without-header: calc(100vh - $height-before-without-header);
