feat: add a11y to back/next buttons

--- a/src/app/projects/images-swiper-glidejs/images-swiper-glidejs.component.html
+++ b/src/app/projects/images-swiper-glidejs/images-swiper-glidejs.component.html
@@ -22,7 +22,11 @@
     </div>
   </div>
   <div class="glide__arrows" data-glide-el="controls">
-    <button class="glide__arrow glide__arrow--left" data-glide-dir="<">
+    <button
+      class="glide__arrow glide__arrow--left"
+      data-glide-dir="<"
+      aria-label="Previous"
+    >
       <svg
         width="11"
         height="20"
@@ -38,7 +42,11 @@
         ></path>
       </svg>
     </button>
-    <button class="glide__arrow glide__arrow--right" data-glide-dir=">">
+    <button
+      class="glide__arrow glide__arrow--right"
+      data-glide-dir=">"
+      aria-label="Next"
+    >
       <svg
         width="11"
         height="20"
