perf: use glide.js swiper for project page

--- a/src/app/projects/images-swiper-glidejs/images-swiper-glidejs.component.html
+++ b/src/app/projects/images-swiper-glidejs/images-swiper-glidejs.component.html
@@ -13,7 +13,7 @@
               responsiveImageAttributes().breakpoints.ngSrcSet.asString
             "
             [sizes]="responsiveImageAttributes().sizes.asString"
-            [priority]="priority() && $index < maxSlidesPerView"
+            [priority]="priority() && $index < options().slidesPerView"
             [attr.alt]="image.alt"
             fill
           />
