--- a/src/app/projects/project-page/project-page.component.scss
+++ b/src/app/projects/project-page/project-page.component.scss
@@ -23,7 +23,7 @@
     align-items: center;
     width: 100%;
 
-    > app-images-swiper {
+    > app-images-swiper-glidejs {
       width: 100%;
       //ℹ️ max-width set by component for big screens
     }
