--- a/src/app/projects/projects-list-page/project-list-item/project-list-item.component.html
+++ b/src/app/projects/projects-list-page/project-list-item/project-list-item.component.html
@@ -1,7 +1,7 @@
 <div class="text-and-images">
   <div class="texts">
     <span class="title">
-      @if (item().hasContent) {
+      @if (item().hasDetails) {
         <a [routerLink]="[_PROJECTS_PATH, item().slug]"
           ><ng-container [ngTemplateOutlet]="title"></ng-container
         ></a>
