refactor: migrate to Cloudinary

--- a/src/app/logo/logo.component.html
+++ b/src/app/logo/logo.component.html
@@ -1,7 +1,7 @@
 @if (_horizontalLogo) {
   <a routerLink="/">
     <img
-      [ngSrc]="_horizontalLogo.asset.filePath"
+      [ngSrc]="_horizontalLogo.asset.filename"
       [alt]="_horizontalLogo.asset.alt"
       [width]="_horizontalLogo.asset.width"
       [height]="_horizontalLogo.asset.height"
