--- a/src/app/projects/images-swiper/images-swiper.component.html
+++ b/src/app/projects/images-swiper/images-swiper.component.html
@@ -18,7 +18,7 @@
         "
       >
         <img
-          [ngSrc]="image.filePath"
+          [ngSrc]="image.filename"
           [ngSrcset]="responsiveImageAttributes().breakpoints.ngSrcSet.asString"
           [sizes]="responsiveImageAttributes().sizes.asString"
           [fill]="true"
