--- a/src/app/about-page/about-page.component.html
+++ b/src/app/about-page/about-page.component.html
@@ -7,7 +7,7 @@
 <article>
   @if (portrait) {
     <img
-      [ngSrc]="portrait.asset.filePath"
+      [ngSrc]="portrait.asset.filename"
       [height]="portrait.asset.height"
       [width]="portrait.asset.width"
       [alt]="portrait.asset.alt"
