--- a/src/app/about-page/about-page.component.html
+++ b/src/app/about-page/about-page.component.html
@@ -5,14 +5,16 @@
 </div>
 <p class="link">{{ emailLocalPart }}&#64;{{ domainName }}</p>
 <article>
-  <img
-    [ngSrc]="portrait.asset.filePath"
-    [height]="portrait.asset.height"
-    [width]="portrait.asset.width"
-    [alt]="portrait.asset.alt"
-    [ngSrcset]="portrait.attributes.breakpoints.ngSrcSet.asString"
-    [sizes]="portrait.attributes.sizes.asString"
-    priority="true"
-  />
+  @if (portrait) {
+    <img
+      [ngSrc]="portrait.asset.filePath"
+      [height]="portrait.asset.height"
+      [width]="portrait.asset.width"
+      [alt]="portrait.asset.alt"
+      [ngSrcset]="portrait.attributes.breakpoints.ngSrcSet.asString"
+      [sizes]="portrait.attributes.sizes.asString"
+      priority="true"
+    />
+  }
   <p>{{ text }}</p>
 </article>
