--- a/src/app/projects/projects-list-page/project-list-item/project-list-item.component.html
+++ b/src/app/projects/projects-list-page/project-list-item/project-list-item.component.html
@@ -24,7 +24,7 @@
   @if (previewImages && previewImages.length) {
     <app-images-swiper
       [images]="previewImages"
-      [responsiveImageAttributes]="responsiveImageAttributes"
+      [sizes]="_sizes"
       [priority]="priority()"
       [customSwiperOptions]="{ slidesPerView: 2 }"
     ></app-images-swiper>
