--- a/src/app/about-page/about-page.component.html
+++ b/src/app/about-page/about-page.component.html
@@ -1,20 +1,20 @@
-<h1>{{ title }}</h1>
+<h1>{{ _title }}</h1>
 <div class="links">
   <app-social></app-social>
   <app-resume></app-resume>
 </div>
-<p class="link">{{ emailLocalPart }}&#64;{{ domainName }}</p>
+<p class="link">{{ _emailLocalPart }}&#64;{{ _domainName }}</p>
 <article>
-  @if (portrait) {
+  @if (_portrait) {
     <img
-      [ngSrc]="portrait.asset.filename"
-      [height]="portrait.asset.height"
-      [width]="portrait.asset.width"
-      [alt]="portrait.asset.alt"
-      [ngSrcset]="portrait.attributes.breakpoints.ngSrcSet.asString"
-      [sizes]="portrait.attributes.sizes.asString"
+      [ngSrc]="_portrait.filename"
+      [height]="_portrait.height"
+      [width]="_portrait.width"
+      [alt]="_portrait.alt ?? 'Portrait picture'"
+      [ngSrcset]="_portrait.breakpoints | toNgSrcSet"
+      [sizes]="_sizes"
       priority="true"
     />
   }
-  <p>{{ text }}</p>
+  <p>{{ _text }}</p>
 </article>
