--- a/src/app/projects/images-swiper/images-swiper.component.html
+++ b/src/app/projects/images-swiper/images-swiper.component.html
@@ -1,7 +1,16 @@
 @if (images().length) {
-  <swiper-container [appSwiper]="_effectiveSwiperOptions()" init="false">
+  @let firstImage = images()[0];
+  @let maxSlidesPerView = _maxSlidesPerView();
+  <swiper-container
+    [appSwiper]="_effectiveSwiperOptions()"
+    init="false"
+    [style.aspect-ratio]="
+      maxSlidesPerView
+        ? (maxSlidesPerView * firstImage.width) / firstImage.height
+        : undefined
+    "
+  >
     @for (image of images(); track image; let i = $index) {
-      @let maxSlidesPerView = _maxSlidesPerView();
       <swiper-slide
         [style.aspect-ratio]="image.width / image.height"
         [style.min-width.%]="
