--- a/src/app/projects/images-swiper/images-swiper.component.html
+++ b/src/app/projects/images-swiper/images-swiper.component.html
@@ -18,9 +18,9 @@
         "
       >
         <img
-          [ngSrc]="image.filename"
-          [ngSrcset]="responsiveImageAttributes().breakpoints.ngSrcSet.asString"
-          [sizes]="responsiveImageAttributes().sizes.asString"
+          [ngSrc]="image.src"
+          [ngSrcset]="image.breakpoints | toNgSrcSet"
+          [sizes]="image.sizes || sizes()"
           [fill]="true"
           [priority]="priority() && i < (maxSlidesPerView ?? 0)"
           [alt]="image.alt || 'Image'"
