--- a/src/app/projects/project-detail-page/project-detail-page.component.html
+++ b/src/app/projects/project-detail-page/project-detail-page.component.html
@@ -19,8 +19,8 @@
     <app-images-swiper
       [images]="album.images"
       [sizes]="album.imageSizes"
-      [customSwiperOptions]="album.swiper.options"
-      [style.max-width.px]="album.swiper.maxWidthPx"
+      [customSwiperOptions]="{ slidesPerView: album.slidesPerView }"
+      [style.max-width.px]="album.maxWidthPx"
       [priority]="index < _maxSwipersPerViewport"
     ></app-images-swiper>
   </div>
