feat: add Cloudinary loader

--- a/src/app/logo/logo.component.html
+++ b/src/app/logo/logo.component.html
@@ -8,6 +8,7 @@
       [priority]="true"
       [ngSrcset]="_logo.breakpoints | toNgSrcSet"
       [sizes]="_logo.sizes"
+      [loaderParams]="_logo | toLoaderParams"
     />
   </a>
 }
