fix: use signed URLs in about page

--- a/src/app/about-page/about-page.component.html
+++ b/src/app/about-page/about-page.component.html
@@ -13,6 +13,7 @@
       [alt]="_portrait.alt"
       [ngSrcset]="_portrait.breakpoints | toNgSrcSet"
       [sizes]="_portrait.sizes"
+      [loaderParams]="_portrait | toLoaderParams"
       priority="true"
     />
   }
