feat: replace fill per width & height specification

--- a/src/app/projects/images-swiper/images-swiper.component.html
+++ b/src/app/projects/images-swiper/images-swiper.component.html
@@ -23,7 +23,8 @@
           [ngSrc]="image.src"
           [ngSrcset]="image.breakpoints | toNgSrcSet"
           [sizes]="isPriority ? effectiveSizes : 'auto,' + effectiveSizes"
-          [fill]="true"
+          [width]="image.width"
+          [height]="image.height"
           [priority]="isPriority"
           [alt]="image.alt || 'Image'"
           [loaderParams]="image | toLoaderParams"
