refactor: reduce swiper options complexity

--- a/src/app/projects/projects-list-page/project-list-item/project-list-item.component.html
+++ b/src/app/projects/projects-list-page/project-list-item/project-list-item.component.html
@@ -26,7 +26,7 @@
       [images]="previewImages"
       [sizes]="item().previewImageSizes"
       [priority]="priority()"
-      [customSwiperOptions]="{ slidesPerView: 2 }"
+      [slidesPerView]="2"
     ></app-images-swiper>
   }
 </div>
