--- a/src/app/projects/images-swiper/images-swiper.component.html
+++ b/src/app/projects/images-swiper/images-swiper.component.html
@@ -1,28 +1,12 @@
 @if (images().length) {
-  @let firstImage = images()[0];
-  @let maxSlidesPerView = _maxSlidesPerView();
-  <swiper-container
-    [appSwiper]="_effectiveSwiperOptions()"
-    init="false"
-    [style.aspect-ratio]="
-      maxSlidesPerView
-        ? (maxSlidesPerView * firstImage.width) / firstImage.height
-        : undefined
-    "
-  >
+  <swiper-container [appSwiper]="_swiperOptions()" init="false">
     @for (image of images(); track image; let i = $index) {
-      <swiper-slide
-        [style.aspect-ratio]="image.width / image.height"
-        [style.min-width.%]="
-          maxSlidesPerView ? 100 / maxSlidesPerView : undefined
-        "
-      >
-        @let isPriority = priority() && i < (maxSlidesPerView ?? 0);
-        @let effectiveSizes = image.sizes || sizes();
+      <swiper-slide [style.width.%]="100 / slidesPerView()">
+        @let isPriority = priority() && i < slidesPerView();
         <img
           [ngSrc]="image.src"
           [ngSrcset]="image.breakpoints | toNgSrcSet"
-          [sizes]="isPriority ? effectiveSizes : 'auto,' + effectiveSizes"
+          [sizes]="isPriority ? sizes() : 'auto,' + sizes()"
           [width]="image.width"
           [height]="image.height"
           [priority]="isPriority"
