refactor: make sizes mandatory in swiper

--- a/src/app/projects/images-swiper/images-swiper.component.html
+++ b/src/app/projects/images-swiper/images-swiper.component.html
@@ -20,7 +20,7 @@
         <img
           [ngSrc]="image.src"
           [ngSrcset]="image.breakpoints | toNgSrcSet"
-          [sizes]="image.sizes || sizes()"
+          [sizes]="sizes()"
           [fill]="true"
           [priority]="priority() && i < (maxSlidesPerView ?? 0)"
           [alt]="image.alt || 'Image'"
