refactor: custom swiper options into just slides per view

--- a/src/app/projects/projects-list-page/project-list-item/project-list-item.component.html
+++ b/src/app/projects/projects-list-page/project-list-item/project-list-item.component.html
@@ -26,7 +26,7 @@
       [images]="previewImages"
       [sizes]="item().previewImageSizes"
       [priority]="priority()"
-      [customSwiperOptions]="{ slidesPerView: _SLIDES_PER_VIEW }"
+      [slidesPerView]="_SLIDES_PER_VIEW"
     ></app-images-swiper>
   }
 </div>
