--- a/src/app/projects/images-swiper/images-swiper.component.html
+++ b/src/app/projects/images-swiper/images-swiper.component.html
@@ -1,28 +1,23 @@
 @if (images().length) {
   @let firstImage = images()[0];
-  @let maxSlidesPerView = _maxSlidesPerView();
   <swiper-container
-    [appSwiper]="_effectiveSwiperOptions()"
+    [appSwiper]="_swiperOptions()"
     init="false"
     [style.aspect-ratio]="
-      maxSlidesPerView
-        ? (maxSlidesPerView * firstImage.width) / firstImage.height
-        : undefined
+      (slidesPerView() * firstImage.width) / firstImage.height
     "
   >
     @for (image of images(); track image; let i = $index) {
       <swiper-slide
         [style.aspect-ratio]="image.width / image.height"
-        [style.min-width.%]="
-          maxSlidesPerView ? 100 / maxSlidesPerView : undefined
-        "
+        [style.min-width.%]="100 / slidesPerView()"
       >
         <img
           [ngSrc]="image.src"
           [ngSrcset]="image.breakpoints | toNgSrcSet"
-          [sizes]="image.sizes || sizes()"
+          [sizes]="sizes()"
           [fill]="true"
-          [priority]="priority() && i < (maxSlidesPerView ?? 0)"
+          [priority]="priority() && i < slidesPerView()"
           [alt]="image.alt || 'Image'"
           [loaderParams]="image | toLoaderParams"
         />
