--- a/src/app/projects/images-swiper/images-swiper.component.html
+++ b/src/app/projects/images-swiper/images-swiper.component.html
@@ -1,24 +1,15 @@
 @if (images().length) {
-  @let firstImage = images()[0];
-  <swiper-container
-    [appSwiper]="_swiperOptions()"
-    init="false"
-    [style.aspect-ratio]="
-      (slidesPerView() * firstImage.width) / firstImage.height
-    "
-  >
+  <swiper-container [appSwiper]="_swiperOptions()" init="false">
     @for (image of images(); track image; let i = $index) {
-      <swiper-slide
-        [style.aspect-ratio]="image.width / image.height"
-        [style.min-width.%]="100 / slidesPerView()"
-      >
+      <swiper-slide>
         <img
           [ngSrc]="image.src"
+          [width]="image.width"
+          [height]="image.height"
+          [alt]="image.alt || 'Image'"
           [ngSrcset]="image.breakpoints | toNgSrcSet"
           [sizes]="sizes()"
-          [fill]="true"
           [priority]="priority() && i < slidesPerView()"
-          [alt]="image.alt || 'Image'"
           [loaderParams]="image | toLoaderParams"
         />
       </swiper-slide>
