--- a/src/app/projects/images-swiper/images-swiper.component.html
+++ b/src/app/projects/images-swiper/images-swiper.component.html
@@ -1,5 +1,12 @@
 @if (images().length) {
-  <swiper-container [appSwiper]="_swiperOptions()" init="false">
+  @let firstImage = images()[0];
+  <swiper-container
+    [appSwiper]="_swiperOptions()"
+    init="false"
+    [style.aspect-ratio]="
+      (firstImage.width * slidesPerView()) / firstImage.height
+    "
+  >
     @for (image of images(); track image; let i = $index) {
       <swiper-slide>
         <img
