--- a/src/app/projects/images-swiper/images-swiper.component.html
+++ b/src/app/projects/images-swiper/images-swiper.component.html
@@ -1,14 +1,10 @@
 @if (images().length) {
-  @let firstImage = images()[0];
-  <swiper-container
-    [appSwiper]="_swiperOptions()"
-    init="false"
-    [style.aspect-ratio]="
-      (firstImage.width * slidesPerView()) / firstImage.height
-    "
-  >
+  <swiper-container [appSwiper]="_swiperOptions()" init="false">
     @for (image of images(); track image; let i = $index) {
-      <swiper-slide>
+      <swiper-slide
+        [style.width.%]="100 / slidesPerView()"
+        [style.aspect-ratio]="image.width / image.height"
+      >
         <img
           [ngSrc]="image.src"
           [width]="image.width"
