--- a/src/app/projects/images-swiper/images-swiper.component.html
+++ b/src/app/projects/images-swiper/images-swiper.component.html
@@ -1,4 +1,6 @@
 @if (images().length) {
+  <!-- 👇 Avoid layout shift https://github.com/davidlj95/chrislb/pull/643 -->
+  <!--    Applying it to slide would be enough if Swiper.js didn't rewrite their HTML -->
   @let firstImage = images()[0];
   <swiper-container
     [appSwiper]="_swiperOptions()"
@@ -8,6 +10,7 @@
     "
   >
     @for (image of images(); track image; let i = $index) {
+      <!-- 👇 Base layout until Swiper.js initializes -->
       <swiper-slide
         [style.width.%]="100 / slidesPerView()"
         [style.aspect-ratio]="image.width / image.height"
