fix: do not fix aspect ratio in project list swipers

--- a/src/app/projects/project-detail-page/project-detail-page.component.html
+++ b/src/app/projects/project-detail-page/project-detail-page.component.html
@@ -22,6 +22,7 @@
       [slidesPerView]="album.slidesPerView"
       [style.max-width.px]="album.maxWidthPx"
       [priority]="index < _maxSwipersPerViewport"
+      [fixContainerAspectRatio]="true"
     ></app-images-swiper>
   </div>
 }
