--- a/src/app/projects/images-swiper/images-swiper.component.html
+++ b/src/app/projects/images-swiper/images-swiper.component.html
@@ -2,12 +2,11 @@
   <!-- 👇 Avoid layout shift https://github.com/davidlj95/chrislb/pull/643 -->
   <!--    Applying it to slide would be enough if Swiper.js didn't rewrite their HTML -->
   @let firstImage = images()[0];
+  @let aspectRatio = (firstImage.width * slidesPerView()) / firstImage.height;
   <swiper-container
     [appSwiper]="_swiperOptions()"
     init="false"
-    [style.aspect-ratio]="
-      (firstImage.width * slidesPerView()) / firstImage.height
-    "
+    [style.aspect-ratio]="fixContainerAspectRatio() ? aspectRatio : undefined"
   >
     @for (image of images(); track image; let i = $index) {
       <!-- 👇 Base layout until Swiper.js initializes -->
