--- a/src/app/projects/project-detail-page/project-detail-page.component.scss
+++ b/src/app/projects/project-detail-page/project-detail-page.component.scss
@@ -37,7 +37,7 @@ $assetsGap: margins.$m;
 .half {
   width: calc(50% - $assetsGap);
 
-  @include breakpoints.until-s {
+  @include breakpoints.until(breakpoints.$s) {
     width: 100%;
   }
 }
