--- a/src/app/projects/projects-list-page/projects-list-page.component.html
+++ b/src/app/projects/projects-list-page/projects-list-page.component.html
@@ -1,7 +1,7 @@
 @for (item of projects(); track item; let index = $index) {
   <app-project-list-item
     [item]="item"
-    [priority]="index < _maxProjectsPerPage"
+    [priority]="index < _MAX_PROJECTS_PER_PAGE"
     [class.has-preview-images]="item.previewImages && item.previewImages.length"
   ></app-project-list-item>
 }
